# Sensor-Pain

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/physics/: mod.rs  nphysics.rs  rapier2d.rs  rapier2d_joint.rs
