[package]
name = "Sensor-Pain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.13"
rapier2d-f64 = { git = "https://github.com/dimforge/rapier", branch = "master", features = ["enhanced-determinism", "wasm-bindgen"] }
rapier2d = { git = "https://github.com/dimforge/rapier", branch = "master", features = [] }
nphysics2d = { git = "https://github.com/rustsim/nphysics", branch = "master", features = [] }
time = "0.3.5"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
codegen-units = 1